welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var motif=Array[Color](getMondeHauteur())
                                        ^Array1:21: error: not found: value baissebrosse
    baissebrosse()
    ^Array1:22: error: not found: value T
    setCouleurBrosse(T(long-1))
                     ^Array1:23: error: not found: value levebrosse
    levebrosse()
    ^